--- a/pontoSaJar/pom.xml
+++ b/pontoSaJar/pom.xml
@@ -58,6 +58,12 @@
             <version>5.3.23</version>
             <type>jar</type>
         </dependency>
+        
+        <dependency>
+    <groupId>com.microsoft.sqlserver</groupId>
+    <artifactId>mssql-jdbc</artifactId>
+    <version>11.2.1.jre18</version>
+</dependency>
 
     </dependencies>
 
